Bug fix on the Workflow.Evaluation.table function which did not use the Utp Lfp, and delta plus

--- a/vignettes/How-to-use-the-EUFLOW-package.Rmd
+++ b/vignettes/How-to-use-the-EUFLOW-package.Rmd
@@ -1,5 +1,5 @@
 ---
-output: word_document
+output: pdf_document
 ---
 <!--
 %\VignetteEngine{knitr::rmarkdown}
@@ -26,6 +26,7 @@ library(knitr)
 knitr::opts_chunk$set(echo = TRUE)
 library("EUFLOW")
 options(stringsAsFactors = FALSE)
+options(digits=3)
 system("touch I_ran_Rmd")
 ```
 ### I. Purpose of the EUFLOW package
@@ -34,72 +35,65 @@ The data in bioinformatics is often in some “raw” form which is not yet read
 
 ### II. Usage of EUFLOW
 
-Users are required to input two separate data files, regardless of the analysis type. The EUFLOW package depends upon a model quality heuristic which we will demonstate here as correlation between gene expression and protein expression. The first data file, for example, we will use ovarian TCGA RNASeq data on two separate workflows provided on the same samples. Only samples for which protein expression data was available are used in the RNASEQDATA file, the HUGO Gene names and descriptions for these proteins are presented in the table below. 
+Users are required to input two separate data files, regardless of the analysis type. The EUFLOW package depends upon a model quality heuristic which we will demonstate here as correlation between gene expression and protein expression. The first data file, for example, we will use ovarian TCGA RNASeq data on two separate workflows provided on the same samples. Only samples for which protein expression data was available are used in the RNASEQDATA file, the HUGO Gene names and descriptions for these proteins are presented in the table below.
 
-
-
-
+```{r}
+data("Describe_hgnc_map")
+Describe_hgnc_map
+```
 
 A small slice of this data file (RNASEQDATA) demonstrates the data structure of numbered row names followed by a column of identifiers including a tag _v1 and _v2. The same samples were processed with two different workflow options RnaSeqv1 and RnaSeqv2. The output below shows the gene expression values for the first 9 identifiers (in this case gene names) with a tag to distinguish workflow option. For brevity only 4 of the 198 sample identifiers are represented.
 
 
 ```{r}
 data(RNASEQDATA)
-RNASEQDATA[1:9,1:5]
-data(RNASEQV1v2PICCOLO)
-#OVPICCOLO<-log2(OVCancerFeatureCountsDATA)
-#OVPICCOLO[1:9,1:5]
-RNASEQV1v2PICCOLO[1:9,1:5]
-
+RNASEQDATA[1:9,1:3]
 ```
 
 
-
-In the second data file we will use TCGA protein expression data on the samples. As above we will output only a subset. Alos note that as this is the reference dataset in this example only one identifier is represented rather than multiple workflow options.   
+In the second data file we will use TCGA protein expression data on the samples. The same 198 samples are represented in the same order. As above we will output only a subset. Alos note that as this is the reference dataset in this example only one identifier is represented rather than multiple workflow options.   
 ```{r}
 data(RPPADATA.original)
 RPPADATA<-RPPADATA.original
-RPPADATA[1:9,1:5]
+RPPADATA[1:9,1:3]
 
 ```
 We now have all that is required to run the EUFLOW package. For the purpose of clarity we define the RNASEQDATA set as the EvaluationExperimentSet, which includes 2 workflow options (RnaSeqV1 and RnaSeqv2). We also define the RPPADATA as the ReferenceSet. If it is the choice of the user multiple reference sets can be utilized. 
 
 ```{r}
-
-#EvaluationExperimentSet<-RNASEQDATA
-EvaluationExperimentSet<-RNASEQV1v2PICCOLO
+EvaluationExperimentSet<-RNASEQDATA
 ReferenceSet<-RPPADATA
 ```
 
 Now that we have the data for our example, the WorkflowEvaluationData function will modify the separate dataframes into one data structure to prepare to calcuate the model quality and perform the evaluation. The first item in the list is the Reference data and the second item in the list is the evaluation data.
 
-
 ```{r,eval=TRUE}
 
 Workflow.Data<-WorkflowEvaluationData(EvaluationExperimentSet,ReferenceSet)
-Workflow.Data[[1]][1:9,1:5]
+Workflow.Data[[1]][1:9,1:3]
 
 ```
-Further data processing to determine the number of workflow options and structure tags will be used to name the output by creating a Merged.options object.
+Labels are assigned using the function to create a data structure that can sort by Reference identifiers and Evaluation identifiers. The tags are _reference for the reference samples
 
 ```{r}
 Merged.options<-merge_tag_options(Workflow.Data)
-Merged.options[1:9,1:5]
-dim(Merged.options)
-names(Merged.options)
-row.names(Merged.options)
+Merged.options[1:9,1:3]
+Merged.options[200:209,1:3]
+
 ```
-The Model.quality.object is created to create a map between the Reference ids and the evaluation ids using the Model.quality.list function.
+The Model.quality.object is created to create a map between the Reference ids and the evaluation ids using the Model.quality.list function. This map is required by the IdMappingAnalysis package
 
 ```{r}
 Model.quality.object<-Model.quality.list(Merged.options)
 
 ```
-Next, Model Quality is an object which contains the model quality values for each of the pairs. How the Model quality is determined is specified by the user.
+Next, Model Quality is an object which contains the model quality values for each of the pairs. How the Model quality is determined is specified by the user. In this example Pearson correlation values are determined for each Reference-Evaluation pair across all samples.
+
 ```{r}
 Model.Quality<-Workflow.Criterion(Model.quality.object,method="pearson")
 head(as.data.frame(Model.Quality))
 ```
+
 ```{r}
 Model.Quality<-Workflow.Criterion(Model.quality.object,method="spearman")
 head(as.data.frame(Model.Quality))
@@ -120,6 +114,15 @@ PlotEvaluationTable(Evaluation.table)
 
 #RNASEQDATAv1$X<-paste(sapply(strsplit(as.character(RNASEQDATAv1$X),"_"), "[", 1),"v3",sep="_")
 ```
+
+```{r}
+data(RNASEQV1v2PICCOLO)
+#OVPICCOLO<-log2(OVCancerFeatureCountsDATA)
+#OVPICCOLO[1:9,1:5]
+RNASEQV1v2PICCOLO[1:9,1:5]
+EvaluationExperimentSet<-RNASEQV1v2PICCOLO
+```
+
 
 ```{r}
 data(BRCARPPADATAFINAL)
