--- a/vignettes/How-to-use-the-EUFLOW-package.Rmd
+++ b/vignettes/How-to-use-the-EUFLOW-package.Rmd
@@ -1,5 +1,5 @@
 ---
-output: html_document
+output: pdf_document
 ---
 <!--
 %\VignetteEngine{knitr::rmarkdown}
@@ -169,7 +169,6 @@ data(BRCATHRESHOLD)
 EvaluationExperimentSet<-BRCATHRESHOLD
 ReferenceSet<-BRCARPPADATAFINAL
 Workflow.Data<-WorkflowEvaluationData(EvaluationExperimentSet,ReferenceSet)
-head(Workflow.Data)
 Merged.options<-merge_tag_options(Workflow.Data)
 Model.quality.object<-Model.quality.list(Merged.options)
 Model.Quality<-Workflow.Criterion(Model.quality.object,method="pearson")
