--- a/vignettes/How-to-use-the-EUFLOW-package.Rmd
+++ b/vignettes/How-to-use-the-EUFLOW-package.Rmd
@@ -1,5 +1,5 @@
 ---
-output: pdf_document
+output: html_document
 ---
 <!--
 %\VignetteEngine{knitr::rmarkdown}
@@ -73,7 +73,7 @@ Workflow.Data[[1]][1:9,1:3]
 Labels are assigned using the function to create a data structure that can sort by Reference identifiers and Evaluation identifiers. The tags are _reference for the reference data and _path for the Evaluation data. In addition the Evaluation data tags have a Workflow label to specify the type of evaluation data. 
 
 ```{r}
-Merged.options<-merge_tag_options(Workflow.Data)
+Merged.options<-merge_tag_options(Workflow.Data,EvaluationTag=c("RNASeqv1","RNASEQv2"))
 Merged.options[1:9,1:3]
 ```
 The Model.quality.object is created to create a map between the Reference ids and the evaluation ids using the Model.quality.list function. This map is required by the IdMappingAnalysis package
@@ -138,7 +138,7 @@ data(RNASEQV1v2PICCOLO)
 EvaluationExperimentSet<-RNASEQV1v2PICCOLO
 ReferenceSet<-RPPADATA
 Workflow.Data<-WorkflowEvaluationData(EvaluationExperimentSet,ReferenceSet)
-Merged.options<-merge_tag_options(Workflow.Data)
+Merged.options<-merge_tag_options(Workflow.Data,EvaluationTag=c("RNASeqv1","RNASeqv2","PICCOLO"))
 Model.quality.object<-Model.quality.list(Merged.options)
 Model.Quality<-Workflow.Criterion(Model.quality.object,method="pearson")
 Posterior.dataframe<-Workflow.posteriorestimate(Model.quality.object,Model.Quality)
@@ -154,7 +154,7 @@ data(BRCASALMONDATAFINAL)
 EvaluationExperimentSet<-BRCASALMONDATAFINAL
 ReferenceSet<-BRCARPPADATAFINAL
 Workflow.Data<-WorkflowEvaluationData(EvaluationExperimentSet,ReferenceSet)
-Merged.options<-merge_tag_options(Workflow.Data)
+Merged.options<-merge_tag_options(Workflow.Data,EvaluationTag=c("A","B","C","D","E"))
 Model.quality.object<-Model.quality.list(Merged.options)
 Model.Quality<-Workflow.Criterion(Model.quality.object,method="pearson")
 Posterior.dataframe<-Workflow.posteriorestimate(Model.quality.object,Model.Quality)
@@ -169,7 +169,7 @@ data(BRCATHRESHOLD)
 EvaluationExperimentSet<-BRCATHRESHOLD
 ReferenceSet<-BRCARPPADATAFINAL
 Workflow.Data<-WorkflowEvaluationData(EvaluationExperimentSet,ReferenceSet)
-Merged.options<-merge_tag_options(Workflow.Data)
+Merged.options<-merge_tag_options(Workflow.Data,EvaluationTag=c("Allfeatures","Over1000","Over5000","Over10000"))
 Model.quality.object<-Model.quality.list(Merged.options)
 Model.Quality<-Workflow.Criterion(Model.quality.object,method="pearson")
 Posterior.dataframe<-Workflow.posteriorestimate(Model.quality.object,Model.Quality)
