--- a/vignettes/How-to-use-the-EUFLOW-package.Rmd
+++ b/vignettes/How-to-use-the-EUFLOW-package.Rmd
@@ -66,39 +66,39 @@ Now that we have the data for our example, the WorkflowEvaluationData function w
 
 ```{r,eval=TRUE}
 
-Workflow.Data<-WorkflowEvaluationData(EvaluationExperimentSet,ReferenceSet)
+Workflow.Data<-WorkflowPathData(EvaluationExperimentSet,ReferenceSet)
 Workflow.Data[[1]][1:9,1:3]
 
 ```
 Labels are assigned using the function to create a data structure that can sort by Reference identifiers and Evaluation identifiers. The tags are _reference for the reference data and _path for the Evaluation data. In addition the Evaluation data tags have a Workflow label to specify the type of evaluation data. 
 
 ```{r}
-Merged.options<-merge_tag_options(Workflow.Data,EvaluationTag=c("RNASeqv1","RNASEQv2"))
+Merged.options<-BuildEvaluationStructure(Workflow.Data,EvaluationTag=c("RNASeqv1","RNASEQv2"))
 Merged.options[1:9,1:3]
 ```
 The Model.quality.object is created to create a map between the Reference ids and the evaluation ids using the Model.quality.list function. This map is required by the IdMappingAnalysis package
 
 ```{r}
-Model.quality.object<-Model.quality.list(Merged.options)
+Model.quality.object<-WorkflowPathModelQuality(Merged.options)
 
 ```
 Next, Model Quality is an object which contains the model quality values for each of the pairs. How the Model quality is determined is specified by the user. In this example Pearson correlation r values are calculated for each Reference-Evaluation pair across all samples by the Workflow.Criterion function.
 
 ```{r}
-Model.Quality<-Workflow.Criterion(Model.quality.object,method="pearson")
+Model.Quality<-ModelQualityPairs(Model.quality.object,method="pearson")
 head(as.data.frame(Model.Quality))
 ```
 
 The Model quality method can be altered using the "method"" argument in the Workflow.criterion function. Sperman r values are calculated in this example.
 
 ```{r}
-Model.Quality<-Workflow.Criterion(Model.quality.object,method="spearman")
+Model.Quality<-ModelQualityPairs(Model.quality.object,method="spearman")
 head(as.data.frame(Model.Quality))
 ```
 Next the correlation values and the reference-evaluation pairs are are the input to the Workflow.posteriorestimate function. The first step of this function is to apply a bootstrapping procedure to obtain a resampled standard deviation and bias of the model quality values. Next the vector of correlation r values, the variance, and the bias are the input to the EM procedure to estimate the posterior probability and posterior probability variance of belonging to the "+" component. In the figure below a mixture distribution is estmated that has 2 components where one component represents the "+" component and the 0 centered component represents the "-" and "0" component.   
 
 ```{r,message=FALSE}
-Posterior.dataframe<-Workflow.posteriorestimate(Model.quality.object,Model.Quality)
+Posterior.dataframe<-EstimatePosteriorProbability(Model.quality.object,Model.Quality)
 head(Posterior.dataframe)
 ```
 
@@ -115,15 +115,15 @@ A user can now input values for the *Utility of a true positive Utp*, *Loss of a
 This table is estimated from the default values of Utp=1,Lfp=1, deltaPlus =1, and guarantee=1e-5.
 
 ```{r}
-Evaluation.table<-Workflow.Evaluation.table(Posterior.dataframe)
+Evaluation.table<-WorkflowEvaluationTable(Posterior.dataframe)
 Evaluation.table
 
 ```
 A change of the deltaPlus parameter changes the proportional relationship between PrPlus and PrTrue. and Changing the Utlity of a True positive places more user utility on the true positive value as opposed to the false positive.
 
 ```{r}
-Workflow.Evaluation.table(Posterior.dataframe,deltaPlus = 2)
-Workflow.Evaluation.table(Posterior.dataframe,Utp=3)
+WorkflowEvaluationTable(Posterior.dataframe,deltaPlus = 2)
+WorkflowEvaluationTable(Posterior.dataframe,Utp=3)
 
 ```
 
@@ -137,12 +137,12 @@ In each of the following examples the EUFLOW package will be used to evaluate a 
 data(RNASEQV1v2PICCOLO)
 EvaluationExperimentSet<-RNASEQV1v2PICCOLO
 ReferenceSet<-RPPADATA
-Workflow.Data<-WorkflowEvaluationData(EvaluationExperimentSet,ReferenceSet)
-Merged.options<-merge_tag_options(Workflow.Data,EvaluationTag=c("RNASeqv1","RNASeqv2","PICCOLO"))
-Model.quality.object<-Model.quality.list(Merged.options)
-Model.Quality<-Workflow.Criterion(Model.quality.object,method="pearson")
-Posterior.dataframe<-Workflow.posteriorestimate(Model.quality.object,Model.Quality)
-Evaluation.table<-Workflow.Evaluation.table(Posterior.dataframe)
+Workflow.Data<-WorkflowPathData(EvaluationExperimentSet,ReferenceSet)
+Merged.options<-BuildEvaluationStructure(Workflow.Data,EvaluationTag=c("RNASeqv1","RNASeqv2","PICCOLO"))
+Model.quality.object<-WorkflowPathModelQuality(Merged.options)
+Model.Quality<-ModelQualityPairs(Model.quality.object,method="pearson")
+Posterior.dataframe<-EstimatePosteriorProbability(Model.quality.object,Model.Quality)
+Evaluation.table<-WorkflowEvaluationTable(Posterior.dataframe)
 Evaluation.table
 ```
 The second experiment uses the BRCA-TCGA data.
@@ -153,18 +153,18 @@ dim(BRCARPPADATAFINAL)
 data(BRCASALMONDATAFINAL)
 EvaluationExperimentSet<-BRCASALMONDATAFINAL
 ReferenceSet<-BRCARPPADATAFINAL
-Workflow.Data<-WorkflowEvaluationData(EvaluationExperimentSet,ReferenceSet)
-Merged.options<-merge_tag_options(Workflow.Data,EvaluationTag=c("AllGeneIDs","TransmembraneGenesOnly","Non-TransmembraneGenes","Low-Complexity","High-Complexity"))
-Model.quality.object<-Model.quality.list(Merged.options)
-Model.Quality<-Workflow.Criterion(Model.quality.object,method="pearson")
-Posterior.dataframe<-Workflow.posteriorestimate(Model.quality.object,Model.Quality)
-Evaluation.table<-Workflow.Evaluation.table(Posterior.dataframe)
+Workflow.Data<-WorkflowPathData(EvaluationExperimentSet,ReferenceSet)
+Merged.options<-BuildEvaluationStructure(Workflow.Data,EvaluationTag=c("AllGeneIDs","TransmembraneGenesOnly","Non-TransmembraneGenes","Low-Complexity","High-Complexity"))
+Model.quality.object<-WorkflowPathModelQuality(Merged.options)
+Model.Quality<-ModelQualityPairs(Model.quality.object,method="pearson")
+Posterior.dataframe<-EstimatePosteriorProbability(Model.quality.object,Model.Quality)
+Evaluation.table<-WorkflowEvaluationTable(Posterior.dataframe)
 Evaluation.table
-Evaluation.tableL2<-Workflow.Evaluation.table(Posterior.dataframe,Lfp = 2)
-Evaluation.tableL3<-Workflow.Evaluation.table(Posterior.dataframe,Lfp = 3)
-Evaluation.tableL4<-Workflow.Evaluation.table(Posterior.dataframe,Lfp = 4)
-Evaluation.tableL5<-Workflow.Evaluation.table(Posterior.dataframe,Lfp = 5)
-Evaluation.tableL6<-Workflow.Evaluation.table(Posterior.dataframe,Lfp = 6)
+Evaluation.tableL2<-WorkflowEvaluationTable(Posterior.dataframe,Lfp = 2)
+Evaluation.tableL3<-WorkflowEvaluationTable(Posterior.dataframe,Lfp = 3)
+Evaluation.tableL4<-WorkflowEvaluationTable(Posterior.dataframe,Lfp = 4)
+Evaluation.tableL5<-WorkflowEvaluationTable(Posterior.dataframe,Lfp = 5)
+Evaluation.tableL6<-WorkflowEvaluationTable(Posterior.dataframe,Lfp = 6)
 LossPlot<-data.frame(Evaluation.table$Eutility,Evaluation.tableL2$Eutility,Evaluation.tableL3$Eutility,Evaluation.tableL4$Eutility,Evaluation.tableL5$Eutility,Evaluation.tableL6$Eutility)
 #names(UtilityPlot)<-c("LFP1","LFP2","LFP3","LFP4","LFP5","LFP6")
 plot(1:6,LossPlot[1,],ylim = c(0,50),type = "l",col="blue",main="LFP vs Total Expected Utility",xlab="LFP",ylab="TEU")
@@ -173,11 +173,11 @@ lines(1:6,LossPlot[3,],col="green")
 lines(1:6,LossPlot[4,],col="orange")
 lines(1:6,LossPlot[5,])
 
-Evaluation.tableU2<-Workflow.Evaluation.table(Posterior.dataframe,Utp = 2)
-Evaluation.tableU3<-Workflow.Evaluation.table(Posterior.dataframe,Utp = 3)
-Evaluation.tableU4<-Workflow.Evaluation.table(Posterior.dataframe,Utp = 4)
-Evaluation.tableU5<-Workflow.Evaluation.table(Posterior.dataframe,Utp = 5)
-Evaluation.tableU6<-Workflow.Evaluation.table(Posterior.dataframe,Utp = 6)
+Evaluation.tableU2<-WorkflowEvaluationTable(Posterior.dataframe,Utp = 2)
+Evaluation.tableU3<-WorkflowEvaluationTable(Posterior.dataframe,Utp = 3)
+Evaluation.tableU4<-WorkflowEvaluationTable(Posterior.dataframe,Utp = 4)
+Evaluation.tableU5<-WorkflowEvaluationTable(Posterior.dataframe,Utp = 5)
+Evaluation.tableU6<-WorkflowEvaluationTable(Posterior.dataframe,Utp = 6)
 UtilityPlot<-data.frame(Evaluation.table$Eutility,Evaluation.tableU2$Eutility,Evaluation.tableU3$Eutility,Evaluation.tableU4$Eutility,Evaluation.tableU5$Eutility,Evaluation.tableU6$Eutility)
 #names(UtilityPlot)<-c("LFP1","LFP2","LFP3","LFP4","LFP5","LFP6")
 plot(1:6,UtilityPlot[1,],ylim = c(0,100),type = "l",col="blue",main="UTP vs Total Expected Utility",xlab="UTP",ylab="TEU")
@@ -186,21 +186,21 @@ lines(1:6,UtilityPlot[3,],col="green")
 lines(1:6,UtilityPlot[4,],col="orange")
 lines(1:6,UtilityPlot[5,])
 
-PlotEvaluationTable(Evaluation.table)
+ExpectedUtilityPlot(Evaluation.table)
 ```
 
 ```{r}
 data(BRCATHRESHOLD)
 EvaluationExperimentSet<-BRCATHRESHOLD
 ReferenceSet<-BRCARPPADATAFINAL
-Workflow.Data<-WorkflowEvaluationData(EvaluationExperimentSet,ReferenceSet)
-Merged.options<-merge_tag_options(Workflow.Data,EvaluationTag=c("Allfeatures","Over1000","Over5000","Over10000"))
-Model.quality.object<-Model.quality.list(Merged.options)
-Model.Quality<-Workflow.Criterion(Model.quality.object,method="pearson")
-Posterior.dataframe<-Workflow.posteriorestimate(Model.quality.object,Model.Quality)
-Evaluation.table<-Workflow.Evaluation.table(Posterior.dataframe)
+Workflow.Data<-WorkflowPathData(EvaluationExperimentSet,ReferenceSet)
+Merged.options<-BuildEvaluationStructure(Workflow.Data,EvaluationTag=c("Allfeatures","Over1000","Over5000","Over10000"))
+Model.quality.object<-WorkflowPathModelQuality(Merged.options)
+Model.Quality<-ModelQualityPairs(Model.quality.object,method="pearson")
+Posterior.dataframe<-EstimatePosteriorProbability(Model.quality.object,Model.Quality)
+Evaluation.table<-WorkflowEvaluationTable(Posterior.dataframe)
 Evaluation.table
-PlotEvaluationTable(Evaluation.table)
+ExpectedUtilityPlot(Evaluation.table)
 ```
 
 
